# cheetah-software-change

./: .gitignore  CMakeLists.txt  LICENSE  README.md
common/: CMakeLists.txt
common/FootstepPlanner/: GraphSearch.cpp  GraphSearch.h
common/include/: Types.h  cppTypes.h
common/include/Collision/: Collision.h
common/include/ControlParameters/: ControlParameterInterface.h  ControlParameters.h  RobotParameters.h  SimulatorParameters.h
common/include/Controllers/: ContactEstimator.h  LegController.h  OrientationEstimator.h  PositionVelocityEstimator.h
common/include/Dynamics/: ActuatorModel.h  MiniCheetah.h  Quadruped.h  SpatialInertia.h  cheetah.h  spatial.h
common/include/Math/: Interpolation.h  orientation_tools.h
common/include/SimUtilities/: GamepadCommand.h  IMUTypes.h  SimulatorMessage.h
config/: default-terrain.yaml  initial_jpos_ctrl.yaml  mc-mit-ctrl-user-parameters.yaml  mini-cheetah-defaults.yaml  simulator-defaults.yaml
lcm-types/: controller2webots_t.lcm  file_list.txt  gamepad_lcmt.lcm  webots2controller_t.lcm
lcm-types/cpp/: cheetah_visualization_lcmt.hpp  control_parameter_request_lcmt.hpp  control_parameter_respones_lcmt.hpp  controller2webots_t.hpp  ecat_command_t.hpp  ecat_data_t.hpp  gamepad_lcmt.hpp  heightmap_t.hpp  leg_control_command_lcmt.hpp  localization_lcmt.hpp  obstacle_visual_t.hpp  qp_controller_data_t.hpp  rc_channels_t.hpp  rpc_data_clean_t.hpp  rpc_data_t.hpp  rpc_inputs_t.hpp  rpc_outputs_t.hpp  rs_pointcloud_t.hpp  sim_command_t.hpp  simulator_lcmt.hpp  spi_command_t.hpp  spi_data_t.hpp  spi_torque_t.hpp  state_estimator_lcmt.hpp  traversability_map_t.hpp  two_contact_stand_data_t.hpp  vectornav_lcmt.hpp  velocity_visual_t.hpp  vision_data_t.hpp  webots2controller_t.hpp
lcm-types/lcmtypes/: cheetah_visualization_lcmt.java  control_parameter_request_lcmt.java  control_parameter_respones_lcmt.java  controller2webots_t.java  ecat_command_t.java  ecat_data_t.java  gamepad_lcmt.java  heightmap_t.java  leg_control_command_lcmt.java  localization_lcmt.java  microstrain_lcmt.java  obstacle_visual_t.java  qp_controller_data_t.java  rc_channels_t.java  rpc_data_clean_t.java  rpc_data_t.java  rpc_inputs_t.java  rpc_outputs_t.java  rs_pointcloud_t.java  sim_command_t.java  simulator_lcmt.java  spi_command_t.java  spi_data_t.java  spi_torque_t.java  state_estimator_lcmt.java  traversability_map_t.java  two_contact_stand_data_t.java  vectornav_lcmt.java  velocity_visual_t.java  vision_data_t.java  wbc_test_data_t.java  webots2controller_t.java
lcm-types/python/: cheetah_visualization_lcmt.py  control_parameter_request_lcmt.py  control_parameter_respones_lcmt.py  controller2webots_t.py  ecat_command_t.py  ecat_data_t.py  gamepad_lcmt.py  heightmap_t.py  localization_lcmt.py  obstacle_visual_t.py  qp_controller_data_t.py  rc_channels_t.py  rpc_data_clean_t.py  rpc_data_t.py  rpc_inputs_t.py  rpc_outputs_t.py  rs_pointcloud_t.py  sim_command_t.py  simulator_lcmt.py  spi_command_t.py  spi_data_t.py  spi_torque_t.py  state_estimator_lcmt.py  traversability_map_t.py  two_contact_stand_data_t.py  vectornav_lcmt.py  velocity_visual_t.py  vision_data_t.py  wbc_test_data_t.py  webots2controller_t.py
robot/: CMakeLists.txt
robot/include/: HardwareBridge.h  RobotController.h  RobotRunner.h  SimulationBridge.h  WebotsBridge.hpp  main_helper.h
robot/src/: HardwareBridge.cpp  JPosInitializer.cpp  RobotRunner.cpp  SimulationBridge.cpp  WebotsBridge.cpp  main_helper.cpp
robot/src/rt/: rt_spi.cpp
scripts/: find_qt_path.sh  make_types.sh  run_mc.sh
sim/: CMakeLists.txt
sim/include/: DrawList.h  Graphics3D.h  RobotInterface.h  SimControlPanel.h  Simulation.h
sim/src/: DrawList.cpp  GameController.cpp  Graphics3D.cpp  JoystickTest.cpp  JoystickTest.ui  RobotInterface.cpp  SimControlPanel.cpp  SimControlPanel.ui  Simulation.cpp  main.cpp  obj_loader.cpp
user/: CMakeLists.txt
user/MIT_Controller/: CMakeLists.txt  MIT_Controller.cpp  MIT_Controller.hpp  MIT_UserParameters.h  main.cpp
user/MIT_Controller/Controllers/WBC_Ctrl/: CMakeLists.txt  WBC_Ctrl.cpp  WBC_Ctrl.hpp
user/MIT_Controller/Controllers/WBC_Ctrl/LocomotionCtrl/: LocomotionCtrl.cpp  LocomotionCtrl.hpp
user/MiniCheetahSpi_Controller/: CMakeLists.txt  MiniCheetahSpi_Controller.cpp  MiniCheetahSpi_Controller.h
webots/controllers/quadruped_controller/: CMakeLists.txt  quadruped_controller  quadruped_controller.cpp  quadruped_controller.hpp  webots_interface.cpp  webots_interface.hpp
webots/worlds/: .quad.wbproj  quad.wbt
(+2863 files in other folders)
